@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Compatability with ALIEN_DOWNLOAD_RULE overrides (gh#11)
 
 0.09      2022-03-16 05:08:43 -0600
   - Fetch::Git plugin will now download just the tag/branch needed
